Remove unusable environment variable. updated to latest version of dedicated server in DST. For more setting guide refer to https://forums.kleientertainment.com/topic/64552-dedicated-server-settings-guide/

--- a/rootfs/game/Master/worldgenoverride.lua.tmpl
+++ b/rootfs/game/Master/worldgenoverride.lua.tmpl
@@ -1,8 +1,8 @@
 return {
   override_enabled = true,
 
-  {{ if (envIsSet "PRESET") }}
-    preset = "{{ envString "PRESET" }}",
+  {{ if (envIsSet "DST_PRESET") }}
+    preset = "{{ envString "DST_PRESET" }}",
   {{ end }}
 
   animals = {
