Dockerfile - moved installing of game towards the top of the layer. It is annoying that the everytime you will have to recompile by downloading the game. - Added Master / Caves volume. 1-game - removed bunch of obselete env variable. - certain stuff have not make it environment, if anyone interested please contribute. setup - remove mod Config and so on check the previous commit. - For me, general server mod / collection server mod is enough.
The rest are the file that suppose to be there, and dynamically generated.

--- a/rootfs/game/DoNotStarveTogether/Cluster_1/cluster.ini.tmpl
+++ b/rootfs/game/DoNotStarveTogether/Cluster_1/cluster.ini.tmpl
@@ -6,7 +6,7 @@ pause_when_empty = {{ envBool "PAUSE_WHEN_EMPTY" }}
 vote_enabled = {{ envBool "VOTE_ENABLED" }}
 
 [NETWORK]
-DST_LAN_ONLY_CLUSTER ={{ envBool "DST_LAN_ONLY_CLUSTER" }}
+lan_only_cluster ={{ envBool "DST_LAN_ONLY_CLUSTER" }}
 offline_cluster = {{ envBool "OFFLINE_SERVER" }}
 cluster_description = {{ envString "SERVER_DESC" }}
 cluster_name = {{ envString "SERVER_NAME" }}
