Fixed some minor issue. Now worldgenoverride.lua.tmpl follows latest format.

--- a/rootfs/game/DoNotStarveTogether/Cluster_1/Master/worldgenoverride.lua.tmpl
+++ b/rootfs/game/DoNotStarveTogether/Cluster_1/Master/worldgenoverride.lua.tmpl
@@ -4,80 +4,73 @@ return {
   {{ if (envIsSet "DST_PRESET") }}
     preset = "{{ envString "DST_PRESET" }}",
   {{ end }}
-
-  animals = {
-    alternatehunt = "{{ envString "ANIMALS_ALTERNATEHUNT" }}",
-    angrybees = "{{ envString "ANIMALS_ANGRYBEES" }}",
-    beefalo = "{{ envString "ANIMALS_BEEFALO" }}",
-    beefaloheat = "{{ envString "ANIMALS_BEEFALOHEAT" }}",
-    bees = "{{ envString "ANIMALS_BEES" }}",
-    birds = "{{ envString "ANIMALS_BIRDS" }}",
-    butterfly = "{{ envString "ANIMALS_BUTTERFLY" }}",
-    buzzard = "{{ envString "ANIMALS_BUZZARD" }}",
-    catcoon = "{{ envString "ANIMALS_CATCOON" }}",
-    frogs = "{{ envString "ANIMALS_FROGS" }}",
-    hunt = "{{ envString "ANIMALS_HUNT" }}",
-    lightninggoat = "{{ envString "ANIMALS_LIGHTNINGGOAT" }}",
-    moles = "{{ envString "ANIMALS_MOLES" }}",
-    penguins = "{{ envString "ANIMALS_PENGUINS" }}",
-    perd = "{{ envString "ANIMALS_PERD" }}",
-    pigs = "{{ envString "ANIMALS_PIGS" }}",
-    rabbits = "{{ envString "ANIMALS_RABBITS" }}",
-    tallbirds = "{{ envString "ANIMALS_TALLBIRDS" }}"{{ if (envIsSet "ANIMALS_ADDITIONAL") }},
-    {{ envString "ANIMALS_ADDITIONAL" }}{{ end }}
-  },
-  misc = {
-    boons = "{{ envString "MISC_BOONS" }}",
-    branching = "{{ envString "MISC_BRANCHING" }}",
-    day = "{{ envString "MISC_DAY" }}",
+  overrides = {
+    -- ANIMAL
+    alternatehunt = "{{ envString "DST_ANIMALS_ALTERNATEHUNT" }}",
+    angrybees = "{{ envString "DST_ANIMALS_ANGRYBEES" }}",
+    beefalo = "{{ envString "DST_ANIMALS_BEEFALO" }}",
+    beefaloheat = "{{ envString "DST_ANIMALS_BEEFALOHEAT" }}",
+    bees = "{{ envString "DST_ANIMALS_BEES" }}",
+    birds = "{{ envString "DST_ANIMALS_BIRDS" }}",
+    butterfly = "{{ envString "DST_ANIMALS_BUTTERFLY" }}",
+    buzzard = "{{ envString "DST_ANIMALS_BUZZARD" }}",
+    catcoon = "{{ envString "DST_ANIMALS_CATCOON" }}",
+    hunt = "{{ envString "DST_ANIMALS_HUNT" }}",
+    lightninggoat = "{{ envString "DST_ANIMALS_LIGHTNINGGOAT" }}",
+    moles = "{{ envString "DST_ANIMALS_MOLES" }}",
+    penguins = "{{ envString "DST_ANIMALS_PENGUINS" }}",
+    perd = "{{ envString "DST_ANIMALS_PERD" }}",
+    pigs = "{{ envString "DST_ANIMALS_PIGS" }}",
+    rabbits = "{{ envString "DST_ANIMALS_RABBITS" }}",
+    tallbirds = "{{ envString "DST_ANIMALS_TALLBIRDS" }}"{{ if (envIsSet "DST_ANIMALS_ADDITIONAL") }},
+    {{ envString "DST_ANIMALS_ADDITIONAL" }}{{ end }}
+    -- MISC
+    boons = "{{ envString "DST_MISC_BOONS" }}",
+    branching = "{{ envString "DST_MISC_BRANCHING" }}",
+    day = "{{ envString "DST_MISC_DAY" }}",
     frograin = "{{ envString "MISC_FROGRAIN" }}",
-    lightning = "{{ envString "MISC_LIGHTNING" }}",
-    loop = "{{ envString "MISC_LOOP" }}",
-    season = "{{ envString "MISC_SEASON" }}",
-    season_start = "{{ envString "MISC_SEASON_START" }}",
-    touchstone = "{{ envString "MISC_TOUCHSTONE" }}",
-    weather = "{{ envString "MISC_WEATHER" }}",
-    world_size = "{{ envString "MISC_WORLD_SIZE" }}",
-    wildfires = "{{ envString "MISC_WILDFIRES" }}"{{ if (envIsSet "MISC_ADDITIONAL") }},
-    {{ envString "MISC_ADDITIONAL" }}{{ end }}
-  },
-  monsters = {
-    bearger = "{{ envString "MONSTERS_BEARGER" }}",
-    chess = "{{ envString "MONSTERS_CHESS" }}",
-    deciduousmonster = "{{ envString "MONSTERS_DECIDUOUSMONSTER" }}",
-    deerclops = "{{ envString "MONSTERS_DEERCLOPS" }}",
-    dragonfly = "{{ envString "MONSTERS_DRAGONFLY" }}",
-    goosemoose = "{{ envString "MONSTERS_GOOSEMOOSE" }}",
-    hounds = "{{ envString "MONSTERS_HOUNDS" }}",
-    krampus = "{{ envString "MONSTERS_KRAMPUS" }}",
-    liefs = "{{ envString "MONSTERS_LIEFS" }}",
-    lureplants = "{{ envString "MONSTERS_LUREPLANTS" }}",
-    merm = "{{ envString "MONSTERS_MERM" }}",
-    spiders = "{{ envString "MONSTERS_SPIDERS" }}",
-    tentacles = "{{ envString "MONSTERS_TENTACLES" }}",
-    walrus = "{{ envString "MONSTERS_WALRUS" }}"{{ if (envIsSet "MONSTERS_ADDITIONAL") }},
-    {{ envString "MONSTERS_ADDITIONAL" }}{{ end }}
-  },
-  resources = {
-    flint = "{{ envString "RESOURCES_FLINT" }}",
-    flowers = "{{ envString "RESOURCES_FLOWERS" }}",
-    grass = "{{ envString "RESOURCES_GRASS" }}",
-    marshbush = "{{ envString "RESOURCES_MARSHBUSH" }}",
-    meteorshowers = "{{ envString "RESOURCES_METEORSHOWERS" }}",
-    meteorspawner = "{{ envString "RESOURCES_METEORSPAWNER" }}",
-    reeds = "{{ envString "RESOURCES_REEDS" }}",
-    rock = "{{ envString "RESOURCES_ROCK" }}",
-    rocks = "{{ envString "RESOURCES_ROCKS" }}",
-    sapling = "{{ envString "RESOURCES_SAPLING" }}",
-    trees = "{{ envString "RESOURCES_TREES" }}",
-    tumbleweed = "{{ envString "RESOURCES_TUMBLEWEED" }}"{{ if (envIsSet "RESOURCES_ADDITIONAL") }},
-    {{ envString "RESOURCES_ADDITIONAL" }}{{ end }}
-  },
-  unprepared = {
-    berrybush = "{{ envString "UNPREPARED_BERRYBUSH" }}",
-    cactus = "{{ envString "UNPREPARED_CACTUS" }}",
-    carrot = "{{ envString "UNPREPARED_CARROT" }}",
-    mushroom = "{{ envString "UNPREPARED_MUSHROOM" }}"{{ if (envIsSet "UNPREPARED_ADDITIONAL") }},
-    {{ envString "UNPREPARED_ADDITIONAL" }}{{ end }}
+    lightning = "{{ envString "DST_MISC_LIGHTNING" }}",
+    loop = "{{ envString "DST_MISC_LOOP" }}",
+    season_start = "{{ envString "DST_MISC_SEASON_START" }}",
+    touchstone = "{{ envString "DST_MISC_TOUCHSTONE" }}",
+    weather = "{{ envString "DST_MISC_WEATHER" }}",
+    world_size = "{{ envString "DST_MISC_WORLD_SIZE" }}",
+    wildfires = "{{ envString "DST_MISC_WILDFIRES" }}"{{ if (envIsSet "MISC_ADDITIONAL") }},
+    {{ envString "DST_MISC_ADDITIONAL" }}{{ end }}
+    -- MONSTER
+    bearger = "{{ envString "DST_MONSTERS_BEARGER" }}",
+    chess = "{{ envString "DST_MONSTERS_CHESS" }}",
+    deciduousmonster = "{{ envString "DST_MONSTERS_DECIDUOUSMONSTER" }}",
+    deerclops = "{{ envString "DST_MONSTERS_DEERCLOPS" }}",
+    dragonfly = "{{ envString "DST_MONSTERS_DRAGONFLY" }}",
+    goosemoose = "{{ envString "DST_MONSTERS_GOOSEMOOSE" }}",
+    hounds = "{{ envString "DST_MONSTERS_HOUNDS" }}",
+    krampus = "{{ envString "DST_MONSTERS_KRAMPUS" }}",
+    liefs = "{{ envString "DST_MONSTERS_LIEFS" }}",
+    lureplants = "{{ envString "DST_MONSTERS_LUREPLANTS" }}",
+    merm = "{{ envString "DST_MONSTERS_MERM" }}",
+    spiders = "{{ envString "DST_MONSTERS_SPIDERS" }}",
+    tentacles = "{{ envString "DST_MONSTERS_TENTACLES" }}",
+    walrus = "{{ envString "DST_MONSTERS_WALRUS" }}"{{ if (envIsSet "MONSTERS_ADDITIONAL") }},
+    {{ envString "DST_MONSTERS_ADDITIONAL" }}{{ end }}
+    -- RESOURCES
+    flint = "{{ envString "DST_RESOURCES_FLINT" }}",
+    flowers = "{{ envString "DST_RESOURCES_FLOWERS" }}",
+    grass = "{{ envString "DST_RESOURCES_GRASS" }}",
+    marshbush = "{{ envString "DST_RESOURCES_MARSHBUSH" }}",
+    meteorshowers = "{{ envString "DST_RESOURCES_METEORSHOWERS" }}",
+    meteorspawner = "{{ envString "DST_RESOURCES_METEORSPAWNER" }}",
+    reeds = "{{ envString "DST_RESOURCES_REEDS" }}",
+    rock = "{{ envString "DST_RESOURCES_ROCK" }}",
+    sapling = "{{ envString "DST_RESOURCES_SAPLING" }}",
+    trees = "{{ envString "DST_RESOURCES_TREES" }}",
+    tumbleweed = "{{ envString "DST_RESOURCES_TUMBLEWEED" }}"{{ if (envIsSet "RESOURCES_ADDITIONAL") }},
+    {{ envString "DST_RESOURCES_ADDITIONAL" }}{{ end }}
+    -- UNPREPARED
+    berrybush = "{{ envString "DST_UNPREPARED_BERRYBUSH" }}",
+    cactus = "{{ envString "DST_UNPREPARED_CACTUS" }}",
+    carrot = "{{ envString "DST_UNPREPARED_CARROT" }}",
+    mushroom = "{{ envString "DST_UNPREPARED_MUSHROOM" }}"{{ if (envIsSet "UNPREPARED_ADDITIONAL") }},
+    {{ envString "DST_UNPREPARED_ADDITIONAL" }}{{ end }}
   }
 }
