feat: Add more giant overrides

--- a/latest/overlay/etc/templates/leveldataoverride.lua.tmpl
+++ b/latest/overlay/etc/templates/leveldataoverride.lua.tmpl
@@ -38,6 +38,9 @@ return {
 {{ if ne (getenv "DST_OVERRIDE_BEEFALOHEAT") "" -}}
     beefaloheat="{{ getenv "DST_OVERRIDE_BEEFALOHEAT" }}",
 {{ end -}}
+{{ if ne (getenv "DST_OVERRIDE_BEEQUEEN") "" -}}
+    beequeen="{{ getenv "DST_OVERRIDE_BEEQUEEN" }}",
+{{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_BEES") "" -}}
     bees="{{ getenv "DST_OVERRIDE_BEES" }}",
 {{ end -}}
@@ -83,6 +86,9 @@ return {
 {{ if ne (getenv "DST_OVERRIDE_CHESS") "" -}}
     chess="{{ getenv "DST_OVERRIDE_CHESS" }}",
 {{ end -}}
+{{ if ne (getenv "DST_OVERRIDE_CRABKING") "" -}}
+    crabking="{{ getenv "DST_OVERRIDE_CRABKING" }}",
+{{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_DAY") "" -}}
     day="{{ getenv "DST_OVERRIDE_DAY" }}",
 {{ end -}}
@@ -101,6 +107,9 @@ return {
 {{ if ne (getenv "DST_OVERRIDE_EARTHQUAKES") "" -}}
     earthquakes="{{ getenv "DST_OVERRIDE_EARTHQUAKES" }}",
 {{ end -}}
+{{ if ne (getenv "DST_OVERRIDE_EYEOFTERROR") "" -}}
+    eyeofterror="{{ getenv "DST_OVERRIDE_EYEOFTERROR" }}",
+{{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_FERN") "" -}}
     fern="{{ getenv "DST_OVERRIDE_FERN" }}",
 {{ end -}}
@@ -118,6 +127,9 @@ return {
 {{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_FROGRAIN") "" -}}
     frograin="{{ getenv "DST_OVERRIDE_FROGRAIN" }}",
+{{ end -}}
+{{ if ne (getenv "DST_OVERRIDE_FRUITFLY") "" -}}
+    fruitfly="{{ getenv "DST_OVERRIDE_FRUITFLY" }}",
 {{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_GOOSEMOOSE") "" -}}
     goosemoose="{{ getenv "DST_OVERRIDE_GOOSEMOOSE" }}",
@@ -139,6 +151,9 @@ return {
 {{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_KEEP_DISCONNECTED_TILES") "" -}}
     keep_disconnected_tiles={{ getenv "DST_OVERRIDE_KEEP_DISCONNECTED_TILES" }},
+{{ end -}}
+{{ if ne (getenv "DST_OVERRIDE_KLAUS") "" -}}
+    klaus="{{ getenv "DST_OVERRIDE_KLAUS" }}",
 {{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_KRAMPUS") "" -}}
     krampus="{{ getenv "DST_OVERRIDE_KRAMPUS" }}",
@@ -163,6 +178,9 @@ return {
 {{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_LUREPLANTS") "" -}}
     lureplants="{{ getenv "DST_OVERRIDE_LUREPLANTS" }}",
+{{ end -}}
+{{ if ne (getenv "DST_OVERRIDE_MALBATROSS") "" -}}
+    malbatross="{{ getenv "DST_OVERRIDE_MALBATROSS" }}",
 {{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_MARSHBUSH") "" -}}
     marshbush="{{ getenv "DST_OVERRIDE_MARSHBUSH" }}",
@@ -247,6 +265,9 @@ return {
 {{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_SPECIALEVENT") "" -}}
     specialevent="{{ getenv "DST_OVERRIDE_SPECIALEVENT" }}",
+{{ end -}}
+{{ if ne (getenv "DST_OVERRIDE_SPIDERQUEEN") "" -}}
+    spiderqueen="{{ getenv "DST_OVERRIDE_SPIDERQUEEN" }}",
 {{ end -}}
 {{ if ne (getenv "DST_OVERRIDE_SPIDERS") "" -}}
     spiders="{{ getenv "DST_OVERRIDE_SPIDERS" }}",
